# weather-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: cli_parser.rs  config.rs  handlers.rs  main.rs  providers.rs
src/cli_parser/: errors.rs
src/config/: config_model.rs
src/handlers/: services.rs  views.rs
src/handlers/services/: models.rs  openweather_service.rs  weatherapi_service.rs
src/handlers/services/models/: openweather_model.rs  weatherapi_model.rs
weather-api-services/: Cargo.toml
weather-api-services/src/: lib.rs  models.rs  openweather_service.rs  weatherapi_service.rs
weather-api-services/src/models/: openweather_model.rs  weatherapi_model.rs
weather-rs/: Cargo.toml
weather-rs/src/: cli_parser.rs  config.rs  handlers.rs  main.rs  providers.rs  views.rs
