[package]
name = "weather-rs"
version = "0.0.3"
authors = ["XNM <artem.shv@proton.me>"]
description = "A quick and easy CLI tool for weather data fetching from different providers."
keywords = ["weather", "cli", "tool", "fetch-api"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "" # TODO
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
rstest = "0.18.2"
