[package]
name = "weather-api-services"
version = "0.1.0"
authors = ["XNM <artem.shv@proton.me>"]
description = "Library for fetching weather data from different providers"
keywords = ["weather", "api", "lib", "fetch-api"]
categories = ["library", "shared-library"]
readme = "README.md"
repository = "https://github.com/XNM1/weather-rs"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
dateparser = "0.2.0"
owo-colors = "3.5.0"
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros"] }
rstest = "0.18.2"
mockito = "1.2.0"
float-cmp = "0.9.0"
